copyOf dobavil, ide подсказала